# f1tenth-t3

./: .gitignore  AGENTS.md  DASHBOARD_REQUIREMENTS.md  README.md
ros2_ws/: README.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/car_control/include/car_control/: car_config.hpp  car_controller.hpp  drive_mode.hpp  drive_parameters_source.hpp
ros2_ws/install/car_control/share/car_control/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
ros2_ws/install/drive_msgs/share/drive_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/drive_msgs/share/drive_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  drive_msgs__rosidl_typesupport_cppExport.cmake  drive_msgs__rosidl_typesupport_introspection_cExport.cmake  drive_msgs__rosidl_typesupport_introspection_cppExport.cmake  export_drive_msgs__rosidl_generator_cExport.cmake  export_drive_msgs__rosidl_generator_cppExport.cmake  rosidl_cmake-extras.cmake  (+2 more)
ros2_ws/install/racer_bringup/share/racer_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/wallfollowing2/lib/wallfollowing2/: follow_the_gap_node  scan_stop_reverse_test_node  wallbalancing_node  wallfollowing_node
ros2_ws/install/wallfollowing2/share/wallfollowing2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/car_control/: CMakeLists.txt
ros2_ws/src/car_control/include/car_control/: drive_parameters_multiplexer.hpp
ros2_ws/src/car_control/src/: car_controller.cpp  drive_parameters_multiplexer.cpp  drive_parameters_source.cpp  uart_actuator_bridge.cpp
ros2_ws/src/drive_msgs/: CMakeLists.txt
ros2_ws/src/racer_bringup/: package.xml  setup.py
ros2_ws/src/racer_bringup/config/: rviz2_lidar.rviz  weighted_pairs_mmse.yaml
ros2_ws/src/racer_bringup/launch/: dashboard.launch.py  fortress_follow_the_gap.launch.py  fortress_scan_stop_test.launch.py  fortress_sim.launch.py  fortress_teleop_rviz.launch.py  fortress_wallbalancing.launch.py  fortress_wallfollowing.launch.py  real_follow_the_gap.launch.py  real_scan_stop_test.launch.py  real_speed_test.launch.py  real_steering_test.launch.py  real_timed_arc_test.launch.py  real_wallbalancing.launch.py  real_weighted_pairs_mmse.launch.py
ros2_ws/src/racer_bringup/racer_bringup/: __init__.py  dashboard_node.py
ros2_ws/src/racer_bringup/resource/: racer_bringup
ros2_ws/src/racer_bringup/worlds/: racetrack_decorated_2_hokuyo.world
ros2_ws/src/wallfollowing2/: setup.cfg  setup.py
ros2_ws/src/wallfollowing2/wallfollowing2/: circle.py  cmd_vel_to_drive_param_real_node.py  follow_the_gap_node.py  rviz_geometry.py  speed_test_node.py  steering_test_node.py  timed_arc_test_node.py  wallfollowing_node.py  weighted_pairs_mmse_algorithm.py  weighted_pairs_mmse_node.py
ros_ws/src/autonomous/wallfollowing2/cfg/: fast.yaml  physical.yaml  wallfollowing2.cfg
ros_ws/src/autonomous/wallfollowing2/script/: wallfollowing.py
ros_ws/src/simulation/racer_world/: model.config  model.sdf
ros_ws/src/simulation/racer_world/meshes/: track_collision.stl  track_visual.dae
ros_ws/src/simulation/racer_world/worlds/: lidar_test.world  racetrack_decorated_2.world  racetrack_decorated_2_hokuyo.world  track_world.sdf
(+17 files in other folders)
