<?xml version="1.0"?>
<package format="3">
  <name>racer_bringup</name>
  <version>0.1.0</version>
  <description>ROS 2 bringup and launch files for Gazebo Fortress simulation.</description>
  <maintainer email="robertkastaman@ucsb.edu">Robert Kastaman</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>wallfollowing2</exec_depend>
  <exec_depend>car_control</exec_depend>
  <exec_depend>drive_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
