<?xml version="1.0"?>
<package format="3">
  <name>car_control</name>
  <version>0.1.0</version>
  <description>ROS 2 control nodes (car controller and drive parameter multiplexer).</description>
  <maintainer email="robertkastaman@ucsb.edu">Robert Kastaman</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>drive_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
