<?xml version="1.0"?>
<package format="3">
  <name>wallfollowing2</name>
  <version>0.1.0</version>
  <description>ROS 2 port of the wallfollowing2 lidar algorithm.</description>
  <maintainer email="robertkastaman@ucsb.edu">Robert Kastaman</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>drive_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
